# MultiProcessShell

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  README.md
.cursor/rules/: cpp-include-guards.mdc  cpp-naming.mdc
.github/workflows/: ci-placeholder.yml
clients/python/: README.md
cmake/: MPSProtobuf.cmake  MPSQt.cmake
demos/: CMakeLists.txt  README.md
demos/demo_client/: main.cpp
demos/demo_host/: main.cpp
docs/: build.md
docs/en/: README.md  build.md  clients-python.md  demo-acceptance.md  demo-ipc.md  demo-morphology.md  demos.md  embed-inproc.md  embed-win.md  embed-x11.md  ipc-alternatives.md  multiprocess-shell-spec.md  proto-ipc.md  scripts.md  src.md  tests.md
docs/zh/: README.md  build.md  demo-acceptance.md  demo-ipc.md  demo-morphology.md  ipc-alternatives.md  multiprocess-shell-spec.md
proto/shell/ipc/v1/: README.md  ipc.proto
scripts/: README.md  build_qt.py  build_repo.py  deploy_demo.py  requirements.txt
src/: README.md
src/client/: CMakeLists.txt  client_app.cpp  client_app.hpp
src/common/: CMakeLists.txt  frame.cpp  frame.hpp  tab_strip.hpp
src/host/: CMakeLists.txt  client_session.cpp  client_session.hpp  shell_app.cpp  shell_app.hpp  shell_window.cpp  shell_window.hpp  tab_info.hpp  tear_out_preview.cpp  tear_out_preview.hpp
src/host/embed/inproc/: README.md
src/host/embed/win/: README.md  embed_container.cpp  embed_container.hpp
src/host/embed/x11/: README.md
src/ipc_qt/: CMakeLists.txt  envelope_channel.cpp  envelope_channel.hpp
tests/: CMakeLists.txt  README.md  test_envelope.cpp  test_frame.cpp  test_tab_strip_lifecycle.cpp  test_tab_strip_mru.cpp  test_tab_strip_tearout.cpp  test_tab_strip_yield.cpp
